# hyprparser-py

./: .gitignore  README.md  pyproject.toml  setup.py
hyprparser/: __init__.py  __main__.py
hyprparser/src/: __init__.py
hyprparser/src/classes/: __init__.py  linetype.py  parser.py  structures.py
