[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyprparser"
version = "0.0.1"
authors = [
  { name="T0kyoB0y", email="" },
]
description = "A Pythonic parser for Hyprland configuration files."
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/T0kyoB0y/hyprparser-py"
"Bug Tracker" = "https://github.com/T0kyoB0y/hyprparser-py/issues"
